fixed image gap

--- a/public/css/mycustom/_mycustom.scss
+++ b/public/css/mycustom/_mycustom.scss
@@ -776,6 +776,7 @@ td.product-name {
       gap: 40px;
       .wherevideois {
         text-align: center;
+        margin-top: 50px;
         img {
           width: 100%;
         }
