--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8192,6 +8192,7 @@ td.product-name .cart-items {
   }
   .radyknalnalanding .unikaj-cierpienia .tobeflex .wherevideois {
     text-align: center;
+    margin-top: 50px;
   }
   .radyknalnalanding .unikaj-cierpienia .tobeflex .wherevideois img {
     width: 100%;
